--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="ashish1.JPG" alt="my profile" width="200" height="400">
     </div>
 
-    <h1>SATYAPRAKASH SHAH</h1>
+    <h1>SATYA PRAKASH GOND</h1>
 
     <ul>
         <li><b>Age:</b> 20</li>
