--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <!-- Images side by side -->
     <div class="image-container">
-        <img src="ashish0.JPG" alt="my profile" width="200" height="400">
-        <img src="ashish1.JPG" alt="my profile" width="200" height="400">
+        <img src="satyaprakash.jpg" alt="my profile" width="200" height="400">
     </div>
 
     <h1>SATYA PRAKASH GOND</h1>
