--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><b>Age:</b> 20</li>
         <li><b>Occupation:</b> Student</li>
         <li><b>Currently living :</b> GHANTI</li>
+        <li><b>Mobile no :</b> +919415846823</li>
     </ul>
 
     <!-- Buttons below profile -->
